# swiftnet_inference

./: CMakeLists.txt  LICENSE  README.md  main.cpp  upload2server.zsh
accuracy-test/: trt_inference.py
accuracy-test/data/cityscapes/: cityscapes.py
common/: common.h  logging.h
model/: onnx_to_caffe.py  swiftnet_to_onnx.py  torch_timer_eval.py
model/models/: semseg.py  util.py
model/models/resnet/: resnet_single_scale.py
tx2-camera/: CMakeLists.txt  camera_test.cpp
tx2-camera/tensorRTWrapper/code/src/: TrtNet.cpp
tx2-camera/test/: batch_test.cpp
tx2-camera/utils/: CMakeLists.txt
